bloodc/src/parser/snapshots/bloodc__parser__tests__generic_struct.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Struct(
            StructDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 7,
                        end: 10,
                        start_line: 1,
                        start_col: 8,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            TypeParam {
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 11,
                                        end: 12,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                                bounds: [],
                                span: Span {
                                    start: 11,
                                    end: 12,
                                    start_line: 1,
                                    start_col: 12,
                                },
                            },
                        ],
                        span: Span {
                            start: 10,
                            end: 13,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                body: Record(
                    [
                        StructField {
                            vis: Private,
                            name: Spanned {
                                node: SymbolU32 {
                                    value: 3,
                                },
                                span: Span {
                                    start: 16,
                                    end: 21,
                                    start_line: 1,
                                    start_col: 17,
                                },
                            },
                            ty: Type {
                                kind: Path(
                                    TypePath {
                                        segments: [
                                            TypePathSegment {
                                                name: Spanned {
                                                    node: SymbolU32 {
                                                        value: 2,
                                                    },
                                                    span: Span {
                                                        start: 23,
                                                        end: 24,
                                                        start_line: 1,
                                                        start_col: 24,
                                                    },
                                                },
                                                args: None,
                                            },
                                        ],
                                        span: Span {
                                            start: 23,
                                            end: 24,
                                            start_line: 1,
                                            start_col: 24,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 23,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 24,
                                },
                            },
                            span: Span {
                                start: 16,
                                end: 24,
                                start_line: 1,
                                start_col: 17,
                            },
                        },
                    ],
                ),
                span: Span {
                    start: 0,
                    end: 26,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 26,
        start_line: 1,
        start_col: 1,
    },
}
