bloodc/src/parser/snapshots/bloodc__parser__tests__group_import.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [
        Group {
            path: ModulePath {
                segments: [
                    Spanned {
                        node: SymbolU32 {
                            value: 1,
                        },
                        span: Span {
                            start: 4,
                            end: 7,
                            start_line: 1,
                            start_col: 5,
                        },
                    },
                    Spanned {
                        node: SymbolU32 {
                            value: 2,
                        },
                        span: Span {
                            start: 8,
                            end: 19,
                            start_line: 1,
                            start_col: 9,
                        },
                    },
                ],
                span: Span {
                    start: 4,
                    end: 19,
                    start_line: 1,
                    start_col: 5,
                },
            },
            items: [
                ImportItem {
                    name: Spanned {
                        node: SymbolU32 {
                            value: 3,
                        },
                        span: Span {
                            start: 22,
                            end: 25,
                            start_line: 1,
                            start_col: 23,
                        },
                    },
                    alias: None,
                },
                ImportItem {
                    name: Spanned {
                        node: SymbolU32 {
                            value: 4,
                        },
                        span: Span {
                            start: 27,
                            end: 34,
                            start_line: 1,
                            start_col: 28,
                        },
                    },
                    alias: None,
                },
                ImportItem {
                    name: Spanned {
                        node: SymbolU32 {
                            value: 5,
                        },
                        span: Span {
                            start: 36,
                            end: 43,
                            start_line: 1,
                            start_col: 37,
                        },
                    },
                    alias: None,
                },
            ],
            span: Span {
                start: 0,
                end: 45,
                start_line: 1,
                start_col: 1,
            },
        },
    ],
    declarations: [],
    span: Span {
        start: 0,
        end: 45,
        start_line: 1,
        start_col: 1,
    },
}
